Fix init bug and remove nowrap from buttons

--- a/assets/css/woocommerce.scss
+++ b/assets/css/woocommerce.scss
@@ -682,7 +682,6 @@ p.demo_store,
 		color: $secondarytext;
 		background-color: $secondary;
 		border: 0;
-		white-space: nowrap;
 		display: inline-block;
 		background-image: none;
 		box-shadow: none;
@@ -762,7 +761,6 @@ p.demo_store,
 
 	a.added_to_cart {
 		padding-top: 0.5em;
-		white-space: nowrap;
 		display: inline-block;
 	}
 
@@ -2196,32 +2194,4 @@ body:not( .search-results ) .twentysixteen .entry-summary {
 .twentysixteen .price ins {
 	background: inherit;
 	color: inherit;
-}
-
-/**
- * Normalized theme styles.
- * Styles applied to themes that don't formally support WooCommerce to normalize elements
- * and make things look better since everything is rendered in the post content.
- */
-.woocommerce-normalized-theme {
- 	&.single-product {
-		// Normalize the button and input to the same height and font size.
-		input[name="quantity"],
-		.single_add_to_cart_button {
-			font-size: 1em;
-			height: 2em;
-			line-height: 2em;
-			padding-top: 0!important;
-			padding-bottom: 0!important;
-		}
-
-		li.product .button {
-			font-size: .75em;
-		}
-
-		a.reset_variations {
-			opacity: .5;
-			float: right;
-		}
-	}
 }
